Rolled back
No longer including Exception counts in Interval output